<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TODOS SOMOS UNO MISMO</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_segunda">Segunda</string>
    <string name="Primero">UNETE NO ESTAS SOL@</string>
    <string name="pri">QUIENES SOMOS</string>
    <string name="seg">AYUDA</string>
    <string name="ter">LEYES QUE TE PROTEGEN</string>
    <string name="cua">CENTROS DE AYUDA</string>
    <string name="quin">CONTACTANOS</string>
    <string name="sig">QUIENES SOMOS</string>
    <string name="sigui">AYUDA</string>
    <string name="leyes">LEYES</string>
    <string name="centros">Centros de ayuda</string>
     <string name="conta">Contactanos</string>
    <string name="title_activity_tercera">Tercera</string>
    <string name="title_activity_ley">Ley</string>
    <string name="title_activity_centros">Centros</string>
    <string name="title_activity_contacto">Contacto</string>

</resources>
